--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Explorador de Arquivos</title>
-  <link rel="stylesheet" href="Serviços.css" />
+  <link rel="stylesheet" href="Ferramentas.css" />
 </head>
 
 <body>
