Tamanho de imagens

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <br>
 
     <div class="imagens">
-      <img src="imagens/HIT.png" alt="Portal HIT">
-      <a href="http://portal.hittelco.com:8095/dashboard.php" class="botao">Uni-fi</a>
+      <img src="imagens/HIT.png" alt="Portal HIT" height="62px" width="90px">
+      <a href="http://portal.hittelco.com:8095/dashboard.php" class="botao">Hit</a>
     </div>
     <br>
     
     <div class="imagens">
-      <img src="imagens/Skymail.jpg" alt="Skymail">
+      <img src="imagens/Skymail.jpg" alt="Skymail" height="62px" width="90px">
       <a href="https://painel.skymail.net.br/login" class="botao">Skymail</a>
     </div>
     <br>
@@ -61,7 +61,7 @@
     <br>
         
     <div class="imagens">
-      <img src="imagens/Trello-Emblem.png" alt="Trello">
+      <img src="imagens/Trello-Emblem.png" alt="Trello" height="62px" width="180px">
       <a href="https://trello.com/b/7IOpt2Zr/" class="botao">Trello</a>
     </div>
     <br>
@@ -75,7 +75,7 @@
 <body>
 
 <body>
-    <h4>EXPLORADOR DE ARQUIVOS</h4>
+    <h5>EXPLORADOR DE ARQUIVOS</h5>
 
      <div class="arquivos">
         <a href="http://arquivos.digaspi.com.br/">
