Alto click nova guia

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="Ferramentas">
     <div class="imagens">
       <img src="imagens/ZABBIX.png" alt="ZABBIX">
-      <a href="http://172.32.0.222/zabbix/zabbix.php?action=dashboard.view" class="botao">Zabbix</a>
+      <a href="http://172.32.0.222/zabbix/zabbix.php?action=dashboard.view" target="_blank" class="botao">Zabbix</a>
     </div>
     <br>
 
