--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <h5>EXPLORADOR DE ARQUIVOS</h5>
 
      <div class="arquivos">
-        <a href="http://arquivos.digaspi.com.br/">
-        <img src="imagens/estilo-plano-da-pasta-amarela_78370-6671.avif" target="_blank" class="Arquivo">
+        <a href="http://arquivos.digaspi.com.br/" target="_blank" >
+        <img src="imagens/estilo-plano-da-pasta-amarela_78370-6671.avif" class="Arquivo">
      </a>
      <a class=>Arquivos</a>
 
