--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        
     <div class="imagens">
       <img src="imagens/DG.jpg" alt="Quadro Operacional">
-      <a href="http://172.32.0.22/reports/report/Quadro_Operacional" target="_blank" class="botao">Quadro Operacional</a>
+      <a href="http://172.32.0.22/reports/report/Quadro_Operacional" target="_blank" class="botao">Quadro Op.</a>
     </div>
     <br>
       
