--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-
  <h1>Ferramentas TI</h1 img src="imagens/MONITORAMENTO.jpg" alt="" height="150px">
 
 
@@ -79,26 +78,15 @@
     <br>
     
 </div>
-<body>
+</body>
 
-<body>
+
     <h5>EXPLORADOR DE ARQUIVOS</h5>
-
      <div class="arquivos">
         <a href="http://arquivos.digaspi.com.br/" target="_blank" >
         <img src="imagens/estilo-plano-da-pasta-amarela_78370-6671.avif" class="Arquivo">
      </a>
      <a class=>Arquivos</a>
-
-       <iframe 
-    src="https://www.google.com/maps/d/u/0/embed?mid=1b_sQut-omxdqQj4ZWo3Gp0ICIDj-CDLB&ehbc=2E312F" 
-    width="640" 
-    height="480"
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
 
 </div>
 </html>
