--- a/index.html
+++ b/index.html
@@ -76,10 +76,15 @@
       <a href="https://login.teamviewer.com/LogOn" target="_blank" class="botao">TeamViewer</a>
     </div>
     <br>
-    
+                
+    <div class="imagens">
+      <img src="imagens/FIREBASE.jpg" alt="Firebase" height="62px" width="80px">
+      <a href="https://console.firebase.google.com/u/0/project/dg-app-43fe0/firestore/databases/-default-/data/~2Fusers~2F0A9DIfMQOCOLlNtPwCzjY6xz2bw1" target="_blank" class="botao">Firebase</a>
+    </div>
+    <br>
+
 </div>
 </body>
-
 
     <h5>EXPLORADOR DE ARQUIVOS</h5>
      <div class="arquivos">
@@ -87,6 +92,5 @@
         <img src="imagens/estilo-plano-da-pasta-amarela_78370-6671.avif" class="Arquivo">
      </a>
      <a class=>Arquivos</a>
-
 </div>
 </html>
