ajuste tamanho botão

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <br>
     
     <div class="imagens">
-      <img src="imagens/DG.jpg" alt="Login op. caixa">
+      <img src="imagens/DG.jpg" alt="Login op. caixa" height="62px" width="180px">
       <a href="http://172.32.0.31/reports/report/login_cx" target="_blank" class="botao">Login op. caixa</a>
     </div>
     <br>
        
     <div class="imagens">
-      <img src="imagens/DG.jpg" alt="Quadro Operacional">
+      <img src="imagens/DG.jpg" alt="Quadro Operacional" height="62px" width="180px">
       <a href="http://172.32.0.22/reports/report/Quadro_Operacional" target="_blank" class="botao">Quadro Op.</a>
     </div>
     <br>
