TRoca de imagem checklista facil

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <br>
                 
     <div class="imagens">
-      <img src="imagens/Checklist.png" alt="Firebase" height="62px" width="80px">
+      <img src="imagens/checklistfacil.png" alt="Firebase" height="62px" width="80px">
       <a href="https://spa.checklistfacil.com.br/login?lang=pt-br" target="_blank" class="botao">Checklistfacil</a>
     </div>
     <br>
