Acrescimo de tela para MAPA

--- a/index.html
+++ b/index.html
@@ -98,5 +98,10 @@
         <img src="imagens/estilo-plano-da-pasta-amarela_78370-6671.avif" class="Arquivo">
      </a>
      <a class=>Arquivos</a>
+        <a href="mapa.html" target="_blank" >
+        <img src="imagens/rotas.png" class="Arquivo">
+     </a>
+     <a class=>Rotas</a>
 </div>
+
 </html>
